# handwritten_digit_recognition_multilayer_perceptron_AI

./: .gitignore  pyproject.toml
src/handwritten_recognition/: Mlp.py  data_processing.py  main.py
